--- a/.github/workflows/docker-image-jenkins2go.yml
+++ b/.github/workflows/docker-image-jenkins2go.yml
@@ -44,11 +44,12 @@ jobs:
         push: true
         tags: devopsteamsdb/devopsteamsdb:jenkins2go_latest
         file: Dockerfile
-        
-    - name: SendGrid Mail Action
-      uses: mmichailidis/sendgrid-mail-action@v1.1
+
+    - name: Send Email With SendGrid
+      uses: licenseware/send-email-notification@v1
       with:
-        sendgrid-token: ${{ secrets.SENDGRID_TOKEN }}
-        mail: devops.team.sdb@gmail.com       
-        subject: Docker build Completred
-        individual: "Docker tag: devopsteamsdb/devopsteamsdb:jenkins2go_${{ steps.date.outputs.date }} $EVENT$, $ISSUE$, $ACTION$" 
+        from-email: devops.team.sdb@gmail.com
+        to-email: eladzazon@gmail.com
+        api-key: ${{ secrets.SENDGRID_TOKEN }}
+        subject: Docker build Completed
+        markdown-body: "Docker tag: devopsteamsdb/devopsteamsdb:jenkins2go_${{ steps.date.outputs.date }}"
