--- a/.github/workflows/docker-image-jenkins2go.yml
+++ b/.github/workflows/docker-image-jenkins2go.yml
@@ -48,8 +48,8 @@ jobs:
     - name: Send Email With SendGrid
       uses: licenseware/send-email-notification@v1
       with:
-        from-email: Docker.Build@gmail.com
-        to-email: devops.team.sdb@gmail.com
+        from-email: devops.team.sdb@gmail.com
+        to-email: ${{ secrets.SENDGRID_TO }}
         api-key: ${{ secrets.SENDGRID_TOKEN }}
         subject: Docker build Completed
         markdown-body: "Docker tag: devopsteamsdb/devopsteamsdb:jenkins2go_${{ steps.date.outputs.date }}"
