--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,3 +57,16 @@ jobs:
         api-key: ${{ secrets.SENDGRID_TOKEN }}
         subject: Docker build Completed
         markdown-body: "Docker tag: devopsteamsdb/devopsteamsdb:jenkins2go_${{ steps.date.outputs.date }}"
+        
+    - name: docker save image
+      run: docker save devopsteamsdb/devopsteamsdb:jenkins2go_${{ steps.date.outputs.date }} | gzip > jenkins2go_${{ steps.date.outputs.date }}.gz
+    
+    - name: get size of file
+      run: ls -lah 
+      
+    - uses: xresloader/upload-to-github-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        draft: false
+        file: jenkins2go_${{ steps.date.outputs.date }}.gz
