--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -62,11 +62,25 @@ jobs:
       run: docker save devopsteamsdb/devopsteamsdb:jenkins2go_${{ steps.date.outputs.date }} | gzip > jenkins2go_${{ steps.date.outputs.date }}.gz
     
     - name: get size of file
-      run: ls -lah 
+      run: ls -lah
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.run_number }}
+        release_name: Release jenkins2go_${{ steps.date.outputs.date }}
+        body: |
+          This will overiid by next step
       
     - uses: xresloader/upload-to-github-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         draft: false
-        file: jenkins2go_${{ steps.date.outputs.date }}.gz
+        file: "*.gz"
+        release_id: ${{ steps.create_release.outputs.id }}
+        overwrite: true
+        verbose: true
