--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -70,7 +70,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.run_number }}
+        tag_name: jenkins2go_${{ steps.date.outputs.date }}
         release_name: Release jenkins2go_${{ steps.date.outputs.date }}
         body: |
           This will overiid by next step
